tests/toy/neg/001449_mutation.toylang
program a = { var a : int while; } .
